@@ -397,14 +397,15 @@
  * 20120211.2 (2.5.0-dev)  Add ap_runtime_dir_relative
  * 20120211.3 (2.5.0-dev)  Add forcerecovery to proxy_balancer_shared struct
  * 20120211.4 (2.5.0-dev)  Add missing HTTP status codes registered with IANA.
+ * 20120724.0 (2.5.0-dev)  Add hostname argument to ap_proxy_checkproxyblock.
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503235UL /* "AP25" */
 
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
-#define MODULE_MAGIC_NUMBER_MAJOR 20120211
+#define MODULE_MAGIC_NUMBER_MAJOR 20120724
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 4                   /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 0                   /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
